--- a/app/src/main/res/layout/list_item_sound.xml
+++ b/app/src/main/res/layout/list_item_sound.xml
@@ -7,6 +7,7 @@
             type="com.tomsk.android.beatbox.SoundViewModel"/>
     </data>
     <Button
+        style="@style/BeatBoxButton"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:text="@{viewModel.title}"
