--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,8 @@
     <style name="BeatBoxButton">
         <item name="android:backgroundTint">@color/dark_blue</item>
     </style>
+
+    <style name="BeatBoxButton.Strong">
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
