--- a/app/src/main/res/layout/list_item_sound.xml
+++ b/app/src/main/res/layout/list_item_sound.xml
@@ -6,11 +6,25 @@
             name="viewModel"
             type="com.tomsk.android.beatbox.SoundViewModel"/>
     </data>
-    <Button
-        style="@style/BeatBoxButton.Strong"
+<!--    <Button-->
+
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="120dp"-->
+<!--        android:text="@{viewModel.title}"-->
+<!--        android:onClick="@{()-> viewModel.onButtonClicked()}"-->
+<!--        tools:text="Sound name"/>-->
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:text="@{viewModel.title}"
-        android:onClick="@{()-> viewModel.onButtonClicked()}"
-        tools:text="Sound name"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:onClick="@{() -> viewModel.onButtonClicked()}"
+            android:text="@{viewModel.title}"
+            tools:text="Sound name"/>
+    </FrameLayout>
+
 </layout>
